syntax = "proto3";
package ghostnet.ptypes;
option go_package = "github.com/GhostNet-Dev/GhostNet-Core/pkg/proto/ptypes";

message TxOutPoint {
    bytes TxId = 1;
    uint32 TxOutIndex = 2;
}

message TxInput {
    TxOutPoint  PrevOut = 1;
	uint32 Sequence = 2;
	uint32 ScriptSize = 3;
	bytes ScriptSig = 4;
}

message TxOutput {
    bytes  Addr = 1;
	bytes BrokerAddr = 2;
	uint64 Type = 3;
	uint64 Value = 4;
	uint32 ScriptSize = 5;
	bytes ScriptPubKey = 6;
	uint32 ScriptExSize = 7;
	bytes ScriptEx = 8;
}

message TxBody {
    uint32 InputCounter = 1;
    repeated TxInput Vin = 2;
	uint32 OutputCounter = 3;
	repeated TxOutput Vout = 4;    
	uint32 Nonce = 5;
	uint32 LockTime = 6;   
}

message GhostTransaction {
	bytes TxId = 1;
	TxBody Body  = 2;
}

message GhostDataTransaction {
	bytes TxId = 1;
	uint64 LogicalAddress = 2;
	uint32 DataSize = 3;
	bytes Data = 4;
}