syntax = "proto3";
package ghostnet.ptypes;
option go_package = "github.com/GhostNet-Dev/GhostNet-Core/pkg/proto/ptypes";

message GhostIp {
    string Ip = 1;
    string Port = 2;
}

message GhostUser {
    string MasterPubKey = 1;
    string PubKey = 2;
    string Nickname = 3;
    GhostIp ip = 4;
}

message KeyPair {
    string PubKey = 1;
    bytes PrivateKey = 2;
}